--- a/src/lib/beercss/theme-override.scss
+++ b/src/lib/beercss/theme-override.scss
@@ -1,24 +1,67 @@
 @use 'sass:color';
+
 @function on( $col )
 {
 	@return color.adjust( $col, $lightness: 50%, $hue: 75deg, $saturation: -30% );
+
 }
 
 $black: #050505;
 $white: #f0f0f0;
 
-$bg: $black;
 
-$primary:			$white;
+$bg: rgb(19, 20, 19);
+
+
+$primary:			green;
 $primary-container:	$primary;
+
 
 $secondary:			rgb(255, 255, 255);
 $secondary-container: $secondary;
 
 $text_col: $white;
 
+// ModMaster specific schemes/vars
+:root
+{
+	--chrome-border: rgb(37, 58, 37); //#{ color.adjust( $bg, $lightness: -10% ) };
+}
+
 :root,
 body.dark {
+	--primary:#78dc77;
+	--on-primary:#003907;
+	--primary-container:#00530f;
+	--on-primary-container:#93f990;
+	--secondary:#b9ccb3;
+	--on-secondary:#253423;
+	--secondary-container:#3b4b38;
+	--on-secondary-container:#d5e8ce;
+	--tertiary:#a1cfd5;
+	--on-tertiary:#00363b;
+	--tertiary-container:#1e4d52;
+	--on-tertiary-container:#bcebf0;
+	--error:#ffb4a9;
+	--error-container:#930006;
+	--on-error:#680003;
+	--on-error-container:#ffdad4;
+	--background: #{ $bg };
+	--on-background:#e2e3dd;
+	--surface:#1a1c19;
+	--on-surface:#e2e3dd;
+	--surface-variant:#424840;
+	--on-surface-variant:#c2c8bd;
+	--outline:#8c9288;
+	--inverse-on-surface:#1a1c19;
+	--inverse-surface:#e2e3dd;
+	--inverse-primary:#006e17;
+	--shadow:#000000;
+}
+
+
+
+old {
 	--primary:		#{  $primary	};
 	--on-primary:	#{  $white		};
 
@@ -59,49 +102,6 @@ body.dark {
 	--inverse-on-surface:#191c1d;
 	--inverse-surface:#e0e3e3;
 	--inverse-primary:#006874;
-	
-	--shadow:#000000;
-}
 
-
-cache {
-	--primary:#4fd8eb;
-	--on-primary:#00363d;
-
-	--primary-container:#004f59;
-	--on-primary-container:#90f1ff;
-
-	--secondary:#b1cbd0;
-	--on-secondary:#1c3438;
-
-	--secondary-container:#334b4f;
-	--on-secondary-container:#cde7ec;
-
-	--tertiary:#bac6ea;
-	--on-tertiary:#24304d;
-
-	--tertiary-container:#3b4664;
-	--on-tertiary-container:#d9e2ff;
-
-	--error:#ffb4a9;
-	--error-container:#930006;
-
-	--on-error:#680003;
-	--on-error-container:#ffdad4;
-
-	--background:#191c1d;
-	--on-background:#e0e3e3;
-
-	--surface:#191c1d;
-	--on-surface:#e0e3e3;
-
-	--surface-variant:#3f484a;
-	--on-surface-variant:#bfc8ca;
-
-	--outline:#899294;
-
-	--inverse-on-surface:#191c1d;
-	--inverse-surface:#e0e3e3;
-	--inverse-primary:#006874;
 	--shadow:#000000;
 }
