tweaks additions more decorators

--- a/src/scss/core/global.scss
+++ b/src/scss/core/global.scss
@@ -1,9 +1,9 @@
 // --------
 // | Uses |
 // --------
-@use '@scss/lib/neumorphic.scss';
+@use '$scss/lib/neumorphic.scss';
 
-@use '@scss/theme.scss' as *;
+@use '$scss/theme.scss' as *;
 
 
 * {
