--- a/src/scss/lib/neumorphic/vars.scss
+++ b/src/scss/lib/neumorphic/vars.scss
@@ -1,4 +1,4 @@
-@use '@scss/theme/default.scss' as *;
+@use '$scss/theme/default.scss' as *;
 
 $neumorphic-slab-corner-radius:	10px;
 $neumorphic-slab-height:		15px;
