Close: #4 - Remove any instance of "master" in titles

--- a/src/lib/beercss/theme-override.scss
+++ b/src/lib/beercss/theme-override.scss
@@ -22,7 +22,7 @@ $secondary-container: $secondary;
 
 $text_col: $white;
 
-// ModMaster specific schemes/vars
+// ModSpider specific schemes/vars
 :root
 {
 	--chrome-border: rgb(37, 58, 37); //#{ color.adjust( $bg, $lightness: -10% ) };
