--- a/src/!_scss/base.scss
+++ b/src/!_scss/base.scss
@@ -1,6 +1,17 @@
 html {
 	background-color: #333;
 	color: #EEE;
+
+	box-sizing: border-box;
+	* {
+		box-sizing: border-box;
+	}
+
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+body {
+	padding: 0;
+	margin: 0;
 }
 
 a {
