--- a/src/!_scss/base.scss
+++ b/src/!_scss/base.scss
@@ -13,7 +13,7 @@ html {
 		user-select: none;
 	}
 
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'Montserrat Variable', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p {
@@ -23,6 +23,8 @@ p {
 body {
 	height:          100vh;
 	width:           100vw;
+	
+	font-family: 'Montserrat Variable', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 a {
